--- a/web/ko_2d_cuttingstock.html
+++ b/web/ko_2d_cuttingstock.html
@@ -9,12 +9,13 @@
 <body>
   <h1>KO 2D CuttingStock</h1>
 
+  <p>log:</p>
   <div id="sample_container_id">
     <p id="sample_text_id">Click me!</p>
   </div>
 
   <script type="application/dart" src="ko_2d_cuttingstock.dart"></script>
   <script src="packages/browser/dart.js"></script>
-  <canvas id="canvas" width="600" height="500"></canvas>
+  <canvas id="canvas" width="1000" height="500"></canvas>
 </body>
 </html>
