--- a/web/ko_2d_cuttingstock.html
+++ b/web/ko_2d_cuttingstock.html
@@ -17,5 +17,12 @@
   <script type="application/dart" src="ko_2d_cuttingstock.dart"></script>
   <script src="packages/browser/dart.js"></script>
   <canvas id="canvas" width="1000" height="500"></canvas>
+  
+  <form action="http://www.google.com/search"
+      method="GET"
+      target="_blank">
+ <input type="number" name="width" />
+ <input type="number" name="height" />
+</form>
 </body>
 </html>
