cutting Stock base

--- a/web/ko_2d_cuttingstock.html
+++ b/web/ko_2d_cuttingstock.html
@@ -21,8 +21,11 @@
   <form action="http://www.google.com/search"
       method="GET"
       target="_blank">
- <input type="number" name="width" />
- <input type="number" name="height" />
-</form>
+      <input type="number" name="width" />
+      <input type="number" name="height" />
+  </form>
+
+<canvas id="cuttingStock" width="350" height="500"></canvas>
+
 </body>
 </html>
