solve for spaces, rotate unqual objects

--- a/web/ko_2d_cuttingstock.html
+++ b/web/ko_2d_cuttingstock.html
@@ -16,7 +16,7 @@
 
   <script type="application/dart" src="ko_2d_cuttingstock.dart"></script>
   <script src="packages/browser/dart.js"></script>
-  <canvas id="canvas" width="1000" height="500"></canvas>
+  <canvas id="canvas" width="1000" height="500">Please use supported browser</canvas>
   
   <form action="http://www.google.com/search"
       method="GET"
@@ -25,7 +25,8 @@
       <input type="number" name="height" />
   </form>
 
-<canvas id="cuttingStock" width="350" height="500"></canvas>
+<canvas id="cuttingStock" width="1000" height="500">Please use supported browser</canvas>
+<div id="stats"></div>
 
 </body>
 </html>
