--- a/web/ko_2d_cuttingstock.html
+++ b/web/ko_2d_cuttingstock.html
@@ -8,12 +8,7 @@
 </head>
 <body>
   <h1>KO 2D CuttingStock</h1>
-
-  <p>log:</p>
-  <div id="sample_container_id">
-    <p id="sample_text_id">Click me!</p>
-  </div>
-
+  <div><a href="#" id="refresh">Refresh</a></div>
   <script type="application/dart" src="ko_2d_cuttingstock.dart"></script>
   <script src="packages/browser/dart.js"></script>
   <canvas id="canvas" width="1000" height="500">Please use supported browser</canvas>
@@ -27,6 +22,11 @@
 
 <canvas id="cuttingStock" width="1000" height="500">Please use supported browser</canvas>
 <div id="stats"></div>
+
+<p>log:</p>
+<div id="sample_container_id">
+    <p id="sample_text_id"></p>
+</div>
 
 </body>
 </html>
