--- a/web/ko_2d_cuttingstock.html
+++ b/web/ko_2d_cuttingstock.html
@@ -3,30 +3,71 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>KO 2D CuttingStock</title>
+<title>2D CuttingStock</title>
 <link rel="stylesheet" href="css/ko_2d_cuttingstock.css">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
-  <h1>KO 2D CuttingStock</h1>
-  <div><a href="#" id="refresh">Generate</a></div>
-  <script type="application/dart" src="ko_2d_cuttingstock.dart"></script>
-  <script src="packages/browser/dart.js"></script>
-  <canvas id="canvas" width="1000" height="500">Please use supported browser</canvas>
+<script type="application/dart" src="ko_2d_cuttingstock.dart"></script>
+<script src="packages/browser/dart.js"></script>
   
-  <form action="http://www.google.com/search"
-      method="GET"
-      target="_blank">
-      Width: <input type="number" class="sizes" name="width" value="150" />
-      Height: <input type="number" class="sizes" name="height" value="150" />
-  </form>
+<div class="container">
+  <div class="page-header">
+    <h1>2D CuttingStock <small>NP-hard problem</small></h1>
+  </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-body">
+        <form action=""
+          method="GET"
+          target="_blank"
+          class="form-inline">
+          <div class="col-xs-3">
+            Min count:<input type="number" class="settings form-control" name="minObjects" value="10" />
+          </div>
+          <div class="col-xs-3">
+            Max count:<input type="number" class="settings form-control" name="maxObjects" value="40" />
+          </div>
+          <div class="col-xs-3">
+            Min size:<input type="number" class="settings form-control" name="minSize" value="20" />
+          </div>
+          <div class="col-xs-3">
+            Max size:<input type="number" class="settings form-control" name="maxSize" value="50" />
+          </div>
+      </form>
+    </div>
+  </div>
 
-<canvas id="cuttingStock" width="1000" height="500">Please use supported browser</canvas>
-<div id="stats"></div>
-
-<p>log:</p>
-<div id="sample_container_id">
-    <p id="sample_text_id"></p>
+  <p>Objects:</p>
+  <canvas id="canvas" width="1500" height="280">Please use supported browser</canvas>
+  
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <div class="col-xs-2">Fit to boxes:</div>
+      <form action="http://www.google.com/search"
+          method="GET"
+          target="_blank"
+          class="form-inline">
+          <div class="col-xs-4">
+            Width: <input type="number" class="sizes form-control" name="width" value="120" />
+          </div>
+          <div class="col-xs-4">
+            Height: <input type="number" class="sizes form-control" name="height" value="120" />
+          </div>
+      </form>
+  </div>
 </div>
 
+  <canvas id="cuttingStock" width="1500" height="350">Please use supported browser</canvas>
+  <div id="stats"></div>
+  
+  <div id="log">
+  <p>log:</p>
+  <div id="sample_container_id">
+      <p id="sample_text_id"></p>
+  </div>
+  </div>
+</div>
 </body>
 </html>
