--- a/web/ko_2d_cuttingstock.html
+++ b/web/ko_2d_cuttingstock.html
@@ -12,9 +12,10 @@
 <script type="application/dart" src="ko_2d_cuttingstock.dart"></script>
 <script src="packages/browser/dart.js"></script>
   
+<a href="https://github.com/tivvit/2D_CuttingStockProblem_Dart"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
 <div class="container">
   <div class="page-header">
-    <h1>2D CuttingStock <small>NP-hard problem</small></h1>
+    <h1>2D CuttingStock <small>NP-hard problem (solved in Dart)</small></h1>
   </div>
   
   <div class="panel panel-default">
@@ -38,8 +39,7 @@
       </form>
     </div>
   </div>
-
-  <p>Objects:</p>
+  
   <canvas id="canvas" width="1500" height="280">Please use supported browser</canvas>
   
   <div class="panel panel-default">
@@ -60,7 +60,13 @@
 </div>
 
   <canvas id="cuttingStock" width="1500" height="350">Please use supported browser</canvas>
-  <div id="stats"></div>
+  
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <div id="stats">Genarate + draw time: <b><span id="generate"></span>ms</b>, Solve + draw time: <b><span id="solve"></span>ms</b></div>
+      <div id="times"></div>
+    </div>
+  </div>
   
   <div id="log">
   <p>log:</p>
